Added the author code

--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -30,7 +30,6 @@
             tools:text="Politics" />
 
         <TextView
-
             android:id="@+id/title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -39,6 +38,14 @@
             android:textSize="16sp"
             tools:text="Election debates commission needed, says Sky News" />
 
+        <TextView
+            android:id="@+id/author"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="8dp"
+            android:layout_marginTop="8dp"
+            android:textSize="16sp"
+            tools:text="Author"/>
     </LinearLayout>
 
     <LinearLayout
